# TouchFish

./: .gitignore  cargo.toml
ExampleRecipes/Dictionary/: dictionary.py
ExampleRecipes/ShowTerminal/: recipe.json
ExampleRecipes/SyncGoogleBookmark/: recipe.json
ExampleRecipes/WebBookmark/: web_bookmark.py
TouchFish/: AbstractView.swift  AppDelegate.swift  ContentView.swift  Main.storyboard  MainView.swift  MainWindow.swift  StatusBar.swift  TouchFishApp.swift
TouchFish.xcodeproj/: project.pbxproj
TouchFish/Assets/: data.db
TouchFish/CommandBar/: CommandBarView.swift  CommandField.swift  CommandFieldViewController.swift  CommandManager.swift  PromptManager.swift
TouchFish/Fish/: Fish.swift  FishAddView.swift  FishDetailView.swift  FishEditView.swift  FishFilterView.swift  FishListItemView.swift  FishListView.swift  FishRepositoryView.swift
TouchFish/Infrastructure/: AppleScript.swift  (+13 more)
touchfish-cli/: Cargo.toml
touchfish-core/: Cargo.toml
touchfish-core/src/: core.rs  fish.rs  lib.rs  service.rs  storage.rs
touchfish-core/src/domain/: fish.rs  mod.rs  statistics.rs
touchfish-core/src/infra/: mod.rs  storage.rs
touchfish-core/src/service/: fish_service.rs  mod.rs
touchfish-data-server/: Cargo.toml
touchfish-data-server/src/: main.rs  req.rs  resp.rs
touchfish-sqlite-storage/: .env  Cargo.toml  diesel.toml
touchfish-sqlite-storage/migrations/2024-10-10-120402_init_tables/: down.sql  up.sql
touchfish-sqlite-storage/src/: lib.rs  model.rs  schema.rs  sqlite_storage.rs
touchfish-sqlite-storage/src/model/: fish.rs  mod.rs  statistics.rs
(+71 files in other folders)
