[package]
name = "touchfish-core"
version = "0.1.0"
edition = "2021"

[dependencies]
yfunc-rust = { path = "../../yfunc-rust" }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
image = "0.25"
