[package]
name = "touchfish-data-server"
version = "0.1.0"
edition = "2021"

[dependencies]
touchfish-core = { path = "../touchfish-core" }
touchfish-sqlite-storage = { path = "../touchfish-sqlite-storage" }
yfunc-rust = { path = "../../yfunc-rust" }
actix-web = "4"
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
env_logger = "0.11"
log = "0.4"
